--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "coinley-checkout": "^0.1.1",
+    "coinley-checkout": "^0.2.7",
     "coinley-sdk": "^0.1.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
