--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "coinley-checkout": "^0.2.9",
+    "coinley-checkout": "^0.4.3",
     "coinley-sdk": "^0.1.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
@@ -24,7 +24,8 @@
     "react-icons": "^5.3.0",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.26.2",
-    "recharts": "^2.13.0"
+    "recharts": "^2.13.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
